<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PointsPlus Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="fat">Fat (g)</string>
    <string name="carbs">Carbs (g)</string>
    <string name="protein">Protein (g)</string>
    <string name="fiber">Fiber (g)</string>
    <string name="calcpointsplus">Get Points!</string>
	<string name="pointsplusvalue">placeholder</string>
</resources>