<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"    >

<!--    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/hello_world" />
-->



		<EditText
		    android:id="@+id/fat"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:inputType="numberDecimal"
		    android:hint="@string/fat">
		   
		</EditText>
		
		<EditText
		    android:id="@+id/carbs"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:inputType="numberDecimal"
		    android:hint="@string/carbs">
		</EditText>
		
		<EditText
		    android:id="@+id/protein"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:inputType="numberDecimal"
		    android:hint="@string/protein">
		</EditText>
    
		<EditText
		    android:id="@+id/fiber"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:inputType="numberDecimal"
		    android:hint="@string/fiber"	>
		</EditText>    
		 
		
	 	<Button
	 	    android:id="@+id/calcpointsplus"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/calcpointsplus"	
		    android:onClick="calculate">	
		</Button>	
	
		<TextView
            android:id="@+id/pointsplusvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pointsplusvalue" 
            android:textColor="#3D00F5"
            android:textSize="45sp">
            </TextView>	    

</LinearLayout>